--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,8 @@
-body {
-    background-color: skyblue;
+@import "tailwindcss";
+
+@plugin "daisyui"
+    
+html, body {
+    background-color: #FFF1DC;
 }
+
