--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<html data-theme="light">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    {% block stylesheets %}
+    {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</head>
+<body>
+{% block body %}
+    <div class="min-h-screen grid grid-cols-[250px_1fr]">
+        <aside class="bg-base-200 p-4">
+            <h2 class="text-xl font-bold mb-4">Menu</h2>
+            <ul class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/band">Bands</a></li>
+                <li><a href="/festival">Festival</a></li>
+            </ul>
+        </aside>
+
+        <div class="flex flex-col">
+            <header class="bg-base-100 p-4 shadow">
+                <h1 class="text-2xl font-bold">Admin dashboard</h1>
+            </header>
+
+            <main class="p-6 flex-1">
+                {% block content %}{% endblock %}
+            </main>
+        </div>
+
+    </div>
+{% endblock %}
+</body>
 </html>
