--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light">
+<html data-theme="pastel">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -18,9 +18,10 @@
         <aside class="bg-base-200 p-4">
             <h2 class="text-xl font-bold mb-4">Menu</h2>
             <ul class="menu">
-                <li><a href="/">Home</a></li>
                 <li><a href="/band">Bands</a></li>
                 <li><a href="/festival">Festival</a></li>
+                <li><a href="/booking">Booking</a></li>
+                <li><a href="/user">User page</a></li>
             </ul>
         </aside>
 
