--- a/templates/festival/index.html.twig
+++ b/templates/festival/index.html.twig
@@ -5,8 +5,8 @@
 {% block content %}
     <h1 class="text-xl italic text-center font-bold pt-4">Festival index</h1>
 
-    <div class="overflow-x-auto rounded-box border border-base-content/5 bg-base-100 m-8">
-        <table class="table">
+    <div class="overflow-y-auto h-96 rounded-box border border-base-content/5 bg-base-100 m-8 ">
+        <table class="table-pin-rows table">
             <thead>
             <tr>
                 <th>Id</th>
