Added verification for Entities

--- a/templates/band/_form.html.twig
+++ b/templates/band/_form.html.twig
@@ -1,5 +1,5 @@
 <div class="max-w-md mx-auto">
-    {{ form_start(form, {'attr': {'class': 'space-y-6 bg-base-100 p-8 rounded-box border border-base-content/5 m-8'}}) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'space-y-6 bg-base-100 p-8 rounded-box border border-base-content/5 m-8'}}) }}
 
     <!-- Name Field -->
     <div class="form-control w-full">
