--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,10 @@
                 <li><a href="/band">Bands</a></li>
                 <li><a href="/festival">Festival</a></li>
                 <li><a href="/booking">Booking</a></li>
-                <li><a href="/user">User page</a></li>
+                <li><a href="/ticket">Ticket</a></li>
+                <li><a href="/code">Code</a></li>
+                <li><a href="/code">User</a></li>
+                <li><a href="/user">Home page user</a></li>
             </ul>
         </aside>
 
