--- a/templates/booking/create.html.twig
+++ b/templates/booking/create.html.twig
@@ -3,13 +3,14 @@
 {% block title %}New Booking{% endblock %}
 
 {% block content %}
-    <h1 class="text-xl italic font-bold text-center pt-4">Book festival {{ festival.name }}</h1>
+    <h1 class="text-xl italic font-bold text-center pt-4">Book ticket {{ ticket.type }} for
+        {{ ticket.festival.name }}</h1>
 
-    {{ include('booking/_create.html.twig') }}
+    {{ include(pathOfBooking) }}
 
     <div class="flex gap-2 mt-4 justify-center">
         <button class="btn btn-soft"
-                onclick="window.location.href='{{ path('app_home_user') }}'"> Choose another festival
+                onclick="window.location.href='{{ path('app_home_user') }}'"> Choose another ticket
         </button>
     </div>
 {% endblock %}
