--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -9,58 +9,40 @@
         <table class="table-pin-rows table" id="bookingTable">
             <thead>
             <tr>
-                <th>Id
-                    <div class="btn-group ml-2">
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(0, 'asc')">Asc</button>
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(0, 'desc')">Desc</button>
-                    </div>
-                </th>
-                <th>Festival
-                    <div class="btn-group ml-2">
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(1, 'asc')">Asc</button>
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(1, 'desc')">Desc</button>
-                    </div>
-                </th>
-                <th>Email
-                    <div class="btn-group ml-2">
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(2, 'asc')">Asc</button>
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(2, 'desc')">Desc</button>
-                    </div>
-                </th>
-                <th>Full name
-                    <div class="btn-group ml-2">
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(3, 'asc')">Asc</button>
-                        <button class="btn btn-xs btn-outline" onclick="sortTable(3, 'desc')">Desc</button>
-                    </div>
-                </th>
+                <th>ID</th>
+                <th>Email</th>
+                <th>Full name</th>
+                <th>Paid amount</th>
+                <th>Ticket</th>
+                <th>Festival</th>
             </tr>
             </thead>
             <tbody>
             {% for booking in bookings %}
-                <tr class="hover:bg-base-300">
-                    <td>{{ booking.id }}</td>
-                    <td>{{ booking.festival.name }}</td>
-                    <td>{{ booking.email }}</td>
-                    <td>{{ booking.fullName }}</td>
-                    </td>
-                    <td>
-                        <button class="btn btn-soft"
-                                onclick="window.location.href='{{ path('app_booking_show', {'id': booking.id}) }}'">
-                            Show
-                        </button>
-                        <button class="btn btn-soft"
-                                onclick="window.location.href='{{ path('app_booking_edit', {'id': booking.id}) }}'">
-                            Edit
-                        </button>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="4">no records found</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+            <tr class="hover:bg-base-300">
+                <td>{{ booking.id }}</td>
+                <td>{{ booking.bookingEmail }}</td>
+                <td>{{ booking.fullName }}</td>
+                <td>{{ booking.paidAmount }}</td>
+                <td>{{ booking.ticket.type }}</td>
+                <td>{{ booking.ticket.festival.name }}</td>
+                </td>
+                <td>
+                    <button class="btn btn-soft"
+                            onclick="window.location.href='{{ path('app_booking_show', {'id': booking.id}) }}'">
+                        Show
+                    </button>
+                    {{ include('booking/_delete_form.html.twig') }}
+    </div>
+    </td>
+    </tr>
+    {% else %}
+        <tr>
+            <td colspan="4">no records found</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
     </div>
     <div class="text-center">
         <button class="btn btn-soft"
