--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -13,12 +13,16 @@
                 <td>{{ booking.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
-                <td>{{ booking.festival.name }}</td>
+                <th>Ticket</th>
+                <td>{{ booking.ticket.type }}</td>
+            </tr>
+            <tr>
+                <th>user</th>
+                <td>{{ booking.user ? booking.user.id : 'N/A' }}</td>
             </tr>
             <tr>
                 <th>email</th>
-                <td>{{ booking.id }}</td>
+                <td>{{ booking.bookingEmail }}</td>
             </tr>
             <tr>
                 <th>fullName</th>
@@ -31,9 +35,6 @@
     <div class="flex gap-2 mt-4 justify-center">
         <button class="btn btn-soft"
                 onclick="window.location.href='{{ path('app_booking_index') }}'"> Back to list
-        </button>
-        <button class="btn btn-soft"
-                onclick="window.location.href='{{ path('app_booking_edit', {'id': booking.id}) }}'"> Edit
         </button>
         {{ include('booking/_delete_form.html.twig') }}
     </div>
