--- a/templates/base_user.html.twig
+++ b/templates/base_user.html.twig
@@ -19,6 +19,8 @@
             <h2 class="text-xl font-bold mb-4">Menu</h2>
             <ul class="menu">
                 <li><a href="/admin">Admin</a></li>
+                <li><a href="/admin">Wishlist</a></li>
+                <li><a href="/list/bands">Bands</a></li>
             </ul>
         </aside>
 
