--- a/templates/festival/_form.html.twig
+++ b/templates/festival/_form.html.twig
@@ -1,5 +1,6 @@
 <div class="max-w-md mx-auto">
-    {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'space-y-6 bg-base-100 p-8 rounded-box border border-base-content/5 m-8'}}) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'space-y-6 bg-base-100 p-8 rounded-box border border-base-content/5 m-8'}, 'enctype': 'multipart/form-data', 'data-turbo': 'false'}) }}
+
 
     <!-- Name Field -->
     <div class="form-control w-full">
@@ -7,10 +8,7 @@
             <span class="label-text font-semibold">Festival Name</span>
         </label>
         {{ form_widget(form.name, {
-            'attr': {
-                'class': 'input input-bordered w-full',
-                'placeholder': 'Enter festival name'
-            }
+            'attr': {'class': 'input input-bordered w-full', 'placeholder': 'Enter festival name'}
         }) }}
         {% if form.name.vars.errors|length > 0 %}
             <label class="label">
@@ -19,16 +17,16 @@
         {% endif %}
     </div>
 
+    {{ form_row(form.photoPath) }}
+
+
     <!-- Location Field -->
     <div class="form-control w-full">
         <label class="label">
             <span class="label-text font-semibold">Location</span>
         </label>
         {{ form_widget(form.location, {
-            'attr': {
-                'class': 'input input-bordered w-full',
-                'placeholder': 'Enter festival location'
-            }
+            'attr': {'class': 'input input-bordered w-full', 'placeholder': 'Enter festival location'}
         }) }}
         {% if form.location.vars.errors|length > 0 %}
             <label class="label">
@@ -37,16 +35,13 @@
         {% endif %}
     </div>
 
-    <!-- startDate Field -->
+    <!-- Start Date Field -->
     <div class="form-control w-full">
         <label class="label">
             <span class="label-text font-semibold">Start date</span>
         </label>
         {{ form_widget(form.startDate, {
-            'attr': {
-                'class': 'input input-bordered w-full',
-                'placeholder': 'Enter festival start date'
-            }
+            'attr': {'class': 'input input-bordered w-full', 'placeholder': 'Enter festival start date'}
         }) }}
         {% if form.startDate.vars.errors|length > 0 %}
             <label class="label">
@@ -55,16 +50,13 @@
         {% endif %}
     </div>
 
-    <!-- endDate Field -->
+    <!-- End Date Field -->
     <div class="form-control w-full">
         <label class="label">
             <span class="label-text font-semibold">End date</span>
         </label>
         {{ form_widget(form.endDate, {
-            'attr': {
-                'class': 'input input-bordered w-full',
-                'placeholder': 'Enter festival end date'
-            }
+            'attr': {'class': 'input input-bordered w-full', 'placeholder': 'Enter festival end date'}
         }) }}
         {% if form.endDate.vars.errors|length > 0 %}
             <label class="label">
@@ -73,24 +65,14 @@
         {% endif %}
     </div>
 
-    <!-- band Field -->
+    <!-- Band Field -->
     <div class="form-control w-full">
         <label class="label">
             <span class="label-text font-semibold">Band</span>
         </label>
         {{ form_widget(form.bands, {
-            'attr': {
-                'class': 'input input-bordered w-full h-56',
-                'placeholder': 'Choose bands'
-            }
+            'attr': {'class': 'input input-bordered w-full h-56', 'placeholder': 'Choose bands'}
         }) }}
-        {#        <div> #}
-        {#            {% for band in bands %} #}
-        {#            <div> #}
-        {#                <span>{{ band.name }}</span> #}
-        {#                <button ></button> #}
-        {#            </div> #}
-        {#        </div> #}
         {% if form.bands.vars.errors|length > 0 %}
             <label class="label">
                 <span class="label-text-alt text-error">{{ form.bands.vars.errors[0].message }}</span>
@@ -98,6 +80,20 @@
         {% endif %}
     </div>
 
+    <!-- Codes Field -->
+    <div class="form-control w-full">
+        <label class="label">
+            <span class="label-text font-semibold">Codes</span>
+        </label>
+        {{ form_widget(form.codes, {
+            'attr': {'class': 'input input-bordered w-full h-40', 'placeholder': 'Choose codes'}
+        }) }}
+        {% if form.codes.vars.errors|length > 0 %}
+            <label class="label">
+                <span class="label-text-alt text-error">{{ form.codes.vars.errors[0].message }}</span>
+            </label>
+        {% endif %}
+    </div>
 
     <!-- Submit Button -->
     <div class="form-control mt-6">
@@ -105,5 +101,6 @@
             {{ button_label|default('Save') }}
         </button>
     </div>
+
     {{ form_end(form) }}
 </div>
